[package]
name = "envoy-wasm-regional-routing"
version = "0.1.0"
authors = ["Elvin Efendi <elvin.efendiyev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.11"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
proxy-wasm = "0.1.2"
